# ComfyUI-WhisperXX

./: README.md  __init__.py  pyproject.toml  requirements.txt  whisperx.json  whisperx_node.py
.github/workflows/: publish.yml
js/: whisperx_node.js
