[project]
name = "obvirm-whisperxx"
description = "WhisperX integration for ComfyUI - Advanced speech-to-text with speaker diarization and word-level timestamps"
version = "2.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["--index-url https://pypi.org/simple --extra-index-url https://download.pytorch.org/whl/cu129", "whisperx==3.7.4", "# Untuk mengunduh model dari Hugging Face Hub.", "huggingface-hub", "# Untuk decoding file audio. 'av' adalah dependensi whisperx untuk memuat audio.", "av", "# Untuk membuat permintaan HTTP (digunakan dalam pengunduh kustom node).", "requests", "# Diperlukan oleh backend diarization (pyannote.audio) untuk model VAD.", "onnxruntime", "# Untuk menampilkan progress bar kustom selama proses.", "tqdm"]

[project.urls]
Repository = "https://github.com/obvirm/ComfyUI-WhisperXX"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/obvirm/ComfyUI-WhisperXX/wiki"
"Bug Tracker" = "https://github.com/obvirm/ComfyUI-WhisperXX/issues"

[tool.comfy]
PublisherId = "obvirm"
DisplayName = "ComfyUI-WhisperXX"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

